[gd_scene load_steps=5 format=3 uid="uid://dmxm0p03watx"]

[ext_resource type="Script" path="res://ui_menu/mode_game_select_menu.gd" id="1_ovaeb"]
[ext_resource type="LabelSettings" uid="uid://cvo20pfr8nwuu" path="res://ui_menu/Component/scroll_item_preview/title_name.tres" id="2_a48mq"]
[ext_resource type="Texture2D" uid="uid://bbgv8mbhyljuh" path="res://Fonts/icon/back.png" id="2_j0qg2"]
[ext_resource type="Script" path="res://addons/label_font_auto_sizer/rich_label_auto_sizer.gd" id="4_mlbwy"]

[node name="ModeGameSelectMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ovaeb")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="Margin/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_stretch_ratio = 0.1
text = "_mode_select_"
label_settings = ExtResource("2_a48mq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Button1" type="Button" parent="Margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
toggle_mode = true
button_pressed = true
text = "_bounty_hunter_"

[node name="Info1" type="RichTextLabel" parent="Margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "_info_game_mode_1_"
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("4_mlbwy")
_max_steps = 20
_size_just_modified_by_autosizer = false
_set_defaults = true
_base_font_size = 50
_current_font_size = 50
_last_size_state = 1

[node name="Button2" type="Button" parent="Margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
toggle_mode = true
text = "_survival_"

[node name="Info2" type="RichTextLabel" parent="Margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "_info_game_mode_2_"
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("4_mlbwy")
_max_steps = 20
_size_just_modified_by_autosizer = false
_set_defaults = true
_base_font_size = 50
_current_font_size = 50
_last_size_state = 1

[node name="Button3" type="Button" parent="Margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
toggle_mode = true
text = "_free_mode_"

[node name="Info3" type="RichTextLabel" parent="Margin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "_info_game_mode_3_"
scroll_active = false
shortcut_keys_enabled = false
script = ExtResource("4_mlbwy")
_max_steps = 20
_size_just_modified_by_autosizer = false
_set_defaults = true
_base_font_size = 50
_current_font_size = 50
_last_size_state = 1

[node name="BackButton" type="Button" parent="Margin/VBoxContainer"]
custom_minimum_size = Vector2(390, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
icon = ExtResource("2_j0qg2")
icon_alignment = 1

[connection signal="pressed" from="Margin/VBoxContainer/VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Margin/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
